[metadata]
name = thttp
version = 1.1.0
author = Brenton Cleeland
author_email = brenton@brntn.me
description = An incredibly lightweight wrapper around urllib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sesh/thttp
project_urls =
    Bug Tracker = https://github.com/sesh/thttp/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = .
python_requires = >=3.6
